[gd_scene load_steps=11 format=3 uid="uid://c0c4ahqi8tuvq"]

[ext_resource type="Script" uid="uid://bwqyeljtctvft" path="res://Ship.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://pe7a4weirj2g" path="res://textures/dark.png" id="2_h40nn"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(3, 0.4, 6)

[sub_resource type="BoxMesh" id="BoxMesh_h40nn"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oam5h"]
albedo_texture = ExtResource("2_h40nn")

[sub_resource type="BoxMesh" id="2"]
size = Vector3(3, 0.4, 6)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_h40nn"]
data = PackedVector3Array(-1.5, 0.2, 3, 1.5, 0.2, 3, -1.5, -0.2, 3, 1.5, 0.2, 3, 1.5, -0.2, 3, -1.5, -0.2, 3, 1.5, 0.2, -3, -1.5, 0.2, -3, 1.5, -0.2, -3, -1.5, 0.2, -3, -1.5, -0.2, -3, 1.5, -0.2, -3, 1.5, 0.2, 3, 1.5, 0.2, -3, 1.5, -0.2, 3, 1.5, 0.2, -3, 1.5, -0.2, -3, 1.5, -0.2, 3, -1.5, 0.2, -3, -1.5, 0.2, 3, -1.5, -0.2, -3, -1.5, 0.2, 3, -1.5, -0.2, 3, -1.5, -0.2, -3, 1.5, 0.2, 3, -1.5, 0.2, 3, 1.5, 0.2, -3, -1.5, 0.2, 3, -1.5, 0.2, -3, 1.5, 0.2, -3, -1.5, -0.2, 3, 1.5, -0.2, 3, -1.5, -0.2, -3, 1.5, -0.2, 3, 1.5, -0.2, -3, -1.5, -0.2, -3)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_oam5h"]
data = PackedVector3Array(-1.5, 0.2, 3, 1.5, 0.2, 3, -1.5, -0.2, 3, 1.5, 0.2, 3, 1.5, -0.2, 3, -1.5, -0.2, 3, 1.5, 0.2, -3, -1.5, 0.2, -3, 1.5, -0.2, -3, -1.5, 0.2, -3, -1.5, -0.2, -3, 1.5, -0.2, -3, 1.5, 0.2, 3, 1.5, 0.2, -3, 1.5, -0.2, 3, 1.5, 0.2, -3, 1.5, -0.2, -3, 1.5, -0.2, 3, -1.5, 0.2, -3, -1.5, 0.2, 3, -1.5, -0.2, -3, -1.5, 0.2, 3, -1.5, -0.2, 3, -1.5, -0.2, -3, 1.5, 0.2, 3, -1.5, 0.2, 3, 1.5, 0.2, -3, -1.5, 0.2, 3, -1.5, 0.2, -3, 1.5, 0.2, -3, -1.5, -0.2, 3, 1.5, -0.2, 3, -1.5, -0.2, -3, 1.5, -0.2, 3, 1.5, -0.2, -3, -1.5, -0.2, -3)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ix3uc"]
data = PackedVector3Array(-1.5, 0.2, 3, 1.5, 0.2, 3, -1.5, -0.2, 3, 1.5, 0.2, 3, 1.5, -0.2, 3, -1.5, -0.2, 3, 1.5, 0.2, -3, -1.5, 0.2, -3, 1.5, -0.2, -3, -1.5, 0.2, -3, -1.5, -0.2, -3, 1.5, -0.2, -3, 1.5, 0.2, 3, 1.5, 0.2, -3, 1.5, -0.2, 3, 1.5, 0.2, -3, 1.5, -0.2, -3, 1.5, -0.2, 3, -1.5, 0.2, -3, -1.5, 0.2, 3, -1.5, -0.2, -3, -1.5, 0.2, 3, -1.5, -0.2, 3, -1.5, -0.2, -3, 1.5, 0.2, 3, -1.5, 0.2, 3, 1.5, 0.2, -3, -1.5, 0.2, 3, -1.5, 0.2, -3, 1.5, 0.2, -3, -1.5, -0.2, 3, 1.5, -0.2, 3, -1.5, -0.2, -3, 1.5, -0.2, 3, 1.5, -0.2, -3, -1.5, -0.2, -3)

[sub_resource type="BoxShape3D" id="BoxShape3D_xljvd"]
size = Vector3(4, 4, 7)

[node name="Ship" type="CharacterBody3D"]
motion_mode = 1
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.407493, 0)
shape = SubResource("1")

[node name="InteriorRoot" type="Node3D" parent="."]

[node name="PilotSeat" type="Marker3D" parent="InteriorRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Seat" type="MeshInstance3D" parent="InteriorRoot/PilotSeat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.05046, -2.06126)
mesh = SubResource("BoxMesh_h40nn")

[node name="PilotCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.461357, -1.33941)

[node name="ShipMesh" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="ShipMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.415851, 0)
material_override = SubResource("StandardMaterial3D_oam5h")
mesh = SubResource("2")
skeleton = NodePath("../../root/@EditorNode@21301/@Panel@14/@VBoxContainer@15/DockHSplitLeftL/DockHSplitLeftR/DockHSplitMain/@VBoxContainer@26/DockVSplitCenter/@VSplitContainer@54/@VBoxContainer@55/@EditorMainScreen@102/MainScreen/@CanvasItemEditor@11482/@VSplitContainer@11134/@HSplitContainer@11136/@HSplitContainer@11138/@Control@11139/@SubViewportContainer@11140/@SubViewport@11141/Ship")

[node name="StaticBody3D" type="StaticBody3D" parent="ShipMesh/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShipMesh/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_h40nn")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="ShipMesh"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -1.70889, 0.584149, 0)
material_override = SubResource("StandardMaterial3D_oam5h")
mesh = SubResource("2")
skeleton = NodePath("../../root/@EditorNode@21301/@Panel@14/@VBoxContainer@15/DockHSplitLeftL/DockHSplitLeftR/DockHSplitMain/@VBoxContainer@26/DockVSplitCenter/@VSplitContainer@54/@VBoxContainer@55/@EditorMainScreen@102/MainScreen/@CanvasItemEditor@11482/@VSplitContainer@11134/@HSplitContainer@11136/@HSplitContainer@11138/@Control@11139/@SubViewportContainer@11140/@SubViewport@11141/Ship")

[node name="StaticBody3D" type="StaticBody3D" parent="ShipMesh/MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShipMesh/MeshInstance3D2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_oam5h")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="ShipMesh"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 1.70601, 0.584149, 0)
material_override = SubResource("StandardMaterial3D_oam5h")
mesh = SubResource("2")
skeleton = NodePath("../../root/@EditorNode@21301/@Panel@14/@VBoxContainer@15/DockHSplitLeftL/DockHSplitLeftR/DockHSplitMain/@VBoxContainer@26/DockVSplitCenter/@VSplitContainer@54/@VBoxContainer@55/@EditorMainScreen@102/MainScreen/@CanvasItemEditor@11482/@VSplitContainer@11134/@HSplitContainer@11136/@HSplitContainer@11138/@Control@11139/@SubViewportContainer@11140/@SubViewport@11141/Ship")

[node name="StaticBody3D" type="StaticBody3D" parent="ShipMesh/MeshInstance3D3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShipMesh/MeshInstance3D3/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ix3uc")

[node name="Hull" type="Area3D" parent="."]

[node name="HullCollision" type="CollisionShape3D" parent="Hull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.884693, 0)
shape = SubResource("BoxShape3D_xljvd")

[connection signal="body_entered" from="Hull" to="." method="_on_hull_body_entered"]
[connection signal="body_exited" from="Hull" to="." method="_on_hull_body_exited"]
